Fixing alignment

--- a/msa-project.client/src/Pages/HabitTrackingPage.module.css
+++ b/msa-project.client/src/Pages/HabitTrackingPage.module.css
@@ -16,19 +16,20 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     padding: 10px;
     text-align: center;
     transition: all 0.3s ease;
 }
 
 .left {
+    align-items: flex-start;
     flex: 3;
     background-color: var(--mantine-color-light-2);
 }
 
 .right {
-    flex: 1;
+    align-items: flex-start;
+    flex: 2;
     background-color: var(--mantine-color-light-3);
 }
 
@@ -68,6 +69,10 @@
     margin: 10px;
 }
 
+.leftcontainer {
+    margin: 100px;
+}
+
 @media (max-width: 600px) {
     .habitItem {
         max-width: 100%;
@@ -79,5 +84,16 @@
 
     .habitItem .mantine-ActionIcon-root {
         margin-left: auto;
+    }
+
+    .left {
+        align-content: center;
+    }
+
+    .leftcontainer {
+        padding-top: calc(2.5rem* var(--mantine-scale));
+        max-width: calc(76.25rem* var(--mantine-scale));
+        margin-left: auto;
+        margin-right: auto;
     }
 }
